# Learn_Agentic_Ai

./: README.md
01_uv/01_project/explore-uv/: pyproject.toml
01_uv/02_project/uv_project02/: pyproject.toml
01_uv/02_project/uv_project02/src/uv_project02/: __init__.py  main.py
02_openrouter/openrouter_agent_app/: .gitignore  README.md  direct_api.py  openai_sdk_agent.py  requirements.txt
03_litellm_openai_agent/01_litellm/first_project/: .env  pyproject.toml
03_litellm_openai_agent/01_litellm/first_project/src/first_project/: hello.py
03_litellm_openai_agent/02_uv_litellm_chainlit/chatbot/: chat_history.json  main.py  pyproject.toml
04_hello_agent/async/hello_agent/: main.py
04_hello_agent/sync/hello_agent/: main.py
sir_ali_aftab_assignments/ai_travel_agent/: .env  README.md  main.py  pyproject.toml
sir_ali_aftab_assignments/career_mentor_agent/: README.md  main.py  pyproject.toml
sir_ali_aftab_assignments/game/: README.md  main.py  pyproject.toml
sir_ali_aftab_assignments/student_agent/: .gitignore  main.py  pyproject.toml
tasks/Health-Wellness-Planner-Agent/: README.md  hooks.py  main.py
