[project]
name = "first-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "faraz141", email = "alamfaraz141@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "litellm>=1.71.1",
]

[project.scripts]
first-project = "first_project:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
